--- a/src/en/components/navbar.html
+++ b/src/en/components/navbar.html
@@ -18,7 +18,7 @@
                             </div>
                         </div>
                         <a href="https://blog.thegivehub.com/en/" class="nav-item nav-link">Blog</a>
-                        <a href="https://thegivehub.com/en/causes.html" class="nav-item nav-link">Causes</a>
+                        <a href="https://app.thegivehub.com/" class="nav-item nav-link">App</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Participate</a>
                             <div class="dropdown-menu">
